i18n for profile show

--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -1,3 +1,7 @@
 en:
+  sign_in: Sign In
+  last_login: Last login
+  followed_users: Followed Users by
+  posts: Posts
   site_info:
     title: "Hamsafaryab"
