create partial for showing posts in a panel

--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -3,5 +3,6 @@ en:
   last_login: Last login
   followed_users: Followed Users by
   posts: Posts
+  no_post_message: There is no post to display.
   site_info:
     title: "Hamsafaryab"
