--- a/config/locales/views/users/fa.yml
+++ b/config/locales/views/users/fa.yml
@@ -4,6 +4,7 @@ fa:
     contact_details: اطلاعات تماس
     edit:
       page_url:
+        your_url_is: 'آدرس اینترنتی شما: '        
         change_url_message:  'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل تغییر است!'
       title: ویرایش پروفایل
     page_url: آدرس اینترنتی در همسفریاب
@@ -12,3 +13,13 @@ fa:
       title: پروفایل
       user_overview:
         overview: در یک نگاه
+      contact_details:
+        goto_change_contact_details: برو به صفحه تغییر اطلاعات تماس
+      personal_profile:
+        goto_change_personal_profile: برو به صفحه تغییر اطلاعات شخصی
+      account_settings:
+        goto_change_account_settings: برو به صفحه تغییر رمز عبور
+      page_url:
+        goto_change_page_url: برو به صفحه تغییر آدرس اینترنتی
+        change_url_message:  'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل تغییر است!'
+        
