--- a/config/locales/views/profiles/fa.yml
+++ b/config/locales/views/profiles/fa.yml
@@ -1,11 +1,13 @@
 fa:
   profiles:
     follow: دنبال کن
-    unfollow: دنبال میکنید
     show:
       force_login_message: قابل رویت برای کاربران عضو.
       single_profile:
         contact_details: اطلاعات تماس
         personal_profile: مشخصات فردی
       user_overview:
+        last_activity: آخریت فعالیت
+        last_login_location: آخرین اتصال از
         overview: در یک نگاه
+    unfollow: دنبال میکنید
