add i18n to dashboard

--- a/config/locales/views/profiles/en.yml
+++ b/config/locales/views/profiles/en.yml
@@ -10,4 +10,5 @@ en:
         last_activity: Last Activity
         last_login_location: Last login Location
         overview: Overview
+        url: Url in Hamsafaryab
     unfollow: Following
