--- a/config/locales/views/profiles/fa.yml
+++ b/config/locales/views/profiles/fa.yml
@@ -10,4 +10,5 @@ fa:
         last_activity: آخریت فعالیت
         last_login_location: آخرین اتصال از
         overview: در یک نگاه
+        url: آدرس در همسفریاب
     unfollow: دنبال میکنید
