--- a/config/locales/views/homes/en.yml
+++ b/config/locales/views/homes/en.yml
@@ -1,6 +1,23 @@
 en:
   homes:
     show:
-      welcome_message: 'Welcome to Hamsafaryab!'
-    search_form:
-      trip_search: "Trip Search"
+      welcome_message: Welcome to Hamsafaryab!
+    trip_insert:
+      description: 'If you are going to have a trip and you have free seats in your
+        car. For sharing those seats with other people who have the same destination as
+        you do, Please insert your trip information.'
+      for_driver: '-As Car Ownner'
+      guide: 'Registering trip needs to sign in
+
+        Please sign in if you already have an account
+
+        For getting a free membership and use all our free services, please %{register}
+
+        '
+      register: Register Trip
+      title: Insert your Trip Information
+    trip_search:
+      description: If you are looking for a vehicle to get to your dastination, You
+        can find it in here.
+      for_passenger: '- As Passenger'
+      title: Search Trip
