--- a/config/locales/views/homes/fa.yml
+++ b/config/locales/views/homes/fa.yml
@@ -1,7 +1,21 @@
 fa:
   homes:
     show:
-      welcome_message: 'به همسفریاب خوش آمدید'
-    search_form:
-      trip_search: "جستجوی سفر"
-    
+      welcome_message: به همسفریاب خوش آمدید
+    trip_insert:
+      description: اگر با خودرو خود عازم سفر هستید، برای پیدا کردن همسفر برای صندلی
+        های خالی خود، مشخصات سفر خود را ثبت کنید.
+      for_driver: (مخصوص راننده)
+      guide: 'برای ثبت سفر نیاز به ورود به سایت دارید.
+
+        در صورتی که حساب کاربری دارید، لطفا ثبت سفر را کلیک کنید.
+
+        در غیر اینصورت، برای استفاده از تمامی خدمات رایگان این وب سایت، لطفا %{register}
+        کنید'
+      register: ثبت سفر
+      title: ورود مشخصات سفر
+    trip_search:
+      description: اگر قصد مسافرت دارید و بدنبال وسیله نقلیه ای برای رفتن به مقصد
+        هستید، خودروهایی که به آن مسیر میروند را جستجو کنید.
+      for_passenger: (مخصوص مسافر)
+      title: جستجوی سفر
