--- a/config/locales/views/layouts/fa.yml
+++ b/config/locales/views/layouts/fa.yml
@@ -8,7 +8,7 @@ fa:
     title: "همسفریاب"
   application:
     footer:
-      copyright: تمام حقوق این سایت متعلق به %{href}  می باشد.
+      copyright: تمامی حقوق این سایت متعلق به %{href}  می باشد.
       term: قوانین
       privacy: حریم خصوصی
       security: امنیت
