--- a/config/locales/views/layouts/en.yml
+++ b/config/locales/views/layouts/en.yml
@@ -13,5 +13,6 @@ en:
       privacy: Privacy
       security: Security
       contact: Contact
-  
-
+    error_messages:
+      title: Errors prohibited this record from being saved 
+      description: 'There were problems with the following fields:'
