--- a/config/locales/views/layouts/fa.yml
+++ b/config/locales/views/layouts/fa.yml
@@ -3,7 +3,8 @@ fa:
   last_login: آخرین ورود  
   followed_users:  دنبال شونده های
   posts: پستها
-  no_post_message: هیچ پستی برای نمایش وجود ندارد.  
+  currency: '%{amount} تومان '
+  no_post_message: هیچ پستی برای نمایش وجود ندارد.
   site_info:
     title: "همسفریاب"
   application:
