--- a/config/locales/views/trips/en.yml
+++ b/config/locales/views/trips/en.yml
@@ -4,6 +4,12 @@ en:
       add_stopover: Add Stopover
       route: Route
       title: New trip form
+    show:
+      form_edit:
+        delete: Delete All
+      show:
+        description: This trip starts on %{date}
+      title: Trip Description
     subtrip_fields:
       at: At
       city: City
