change background of header to rtl and ltr languages compatible

--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -1,5 +1,6 @@
 en:
   hamsafaryab: HamsafarYab
+  slogan: Rideshare and carpool with friendly people.
   no_data: No data
   gender:
     male: Male
