fix bug: current date didnt show in search form

--- a/config/locales/views/search_subtrips/en.yml
+++ b/config/locales/views/search_subtrips/en.yml
@@ -13,4 +13,8 @@ en:
           selector: "Autocomplete Mode"
           placeholder:
             origin: "Please insert start city"
-            destination: "Please insert destination"      
+            destination: "Please insert destination"
+    search:
+      search_filters: Filter Your Search
+      no_trip_registered: No record with this condition. please try again.
+      comming_soon: Comming Soon.
