improve subtrips show layout: car blueprint and display passengers avatar

--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -10,7 +10,7 @@ fa:
   from: مبدا حرکت از 
   via: گذر از 
   to: به مقصد
-  date: تاریخ
+  mydate: تاریخ
   date_time: تاریخ و زمان سفر
   path: مسیر
   price: قیمت
