--- a/config/locales/views/homes/fa.yml
+++ b/config/locales/views/homes/fa.yml
@@ -15,6 +15,7 @@ fa:
       register: ثبت سفر
       title: ورود مشخصات سفر
     trip_search:
+      all_trips: نمایش همه سفرها
       description: اگر قصد مسافرت دارید و بدنبال وسیله نقلیه ای برای رفتن به مقصد
         هستید، خودروهایی که به آن مسیر میروند را جستجو کنید.
       for_passenger: (مخصوص مسافر)
