--- a/config/locales/general/fa.yml
+++ b/config/locales/general/fa.yml
@@ -36,3 +36,6 @@ fa:
   trip_update_message: سفر با موفقبت به روزرسانی شد
   trip_delete_message: سفر ما موفقیت حذف شد
   
+  image_updated_message: تصویر با موفقیت به روز رسانی شد
+  profile_updated_message: پروفایل با موفقبت به روزرسانی شد   
+  
