--- a/config/locales/views/users/fa.yml
+++ b/config/locales/views/users/fa.yml
@@ -3,23 +3,28 @@ fa:
     account_settings: تنظیمات حساب کاربری
     contact_details: اطلاعات تماس
     edit:
+      account_settings:
+        new_password: رمز عبور جدید
       page_url:
-        your_url_is: 'آدرس اینترنتی شما: '        
-        change_url_message:  'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل تغییر است!'
+        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل
+          تغییر است!'
+        your_url_is: 'آدرس اینترنتی شما: '
+      personal_profile:
+        please wait: در حال ثبت. لطفا منتظر بمانید...
       title: ویرایش پروفایل
     page_url: آدرس اینترنتی در همسفریاب
     personal_profile: اطلاعات شخصی
     show:
+      account_settings:
+        goto_change_account_settings: برو به صفحه تغییر رمز عبور
+      contact_details:
+        goto_change_contact_details: برو به صفحه تغییر اطلاعات تماس
+      page_url:
+        change_url_message: 'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل
+          تغییر است!'
+        goto_change_page_url: برو به صفحه تغییر آدرس اینترنتی
+      personal_profile:
+        goto_change_personal_profile: برو به صفحه تغییر اطلاعات شخصی
       title: پروفایل
       user_overview:
         overview: در یک نگاه
-      contact_details:
-        goto_change_contact_details: برو به صفحه تغییر اطلاعات تماس
-      personal_profile:
-        goto_change_personal_profile: برو به صفحه تغییر اطلاعات شخصی
-      account_settings:
-        goto_change_account_settings: برو به صفحه تغییر رمز عبور
-      page_url:
-        goto_change_page_url: برو به صفحه تغییر آدرس اینترنتی
-        change_url_message:  'توجه: آدرس اینترنتی شما در همسفریاب تنها یک بار قابل تغییر است!'
-        
