--- a/config/locales/defaults/devise.en.yml
+++ b/config/locales/defaults/devise.en.yml
@@ -7,6 +7,8 @@ en:
       send_instructions: "You will receive an email with instructions about how to confirm your account in a few minutes."
       send_paranoid_instructions: "If your email address exists in our database, you will receive an email with instructions about how to confirm your account in a few minutes."
     failure:
+      user:
+        not_found_in_database:  'ایمیل یا رمز عبور غیر معتبر.'      
       already_authenticated: "You are already signed in."
       inactive: "Your account is not activated yet."
       invalid: "Invalid email or password."
