--- a/config/locales/mailers/user_mailer/fa.yml
+++ b/config/locales/mailers/user_mailer/fa.yml
@@ -5,9 +5,18 @@ fa:
     booking_request_to_driver:
       passenger_detail: مشخصات مسافر
       subject: تایید رزرو سفر
-      line1: "یک درخواست رزرو برای سفر شما کرده است. مشخصات سفر و مسافر بشرح زیر است"
+      line1: "یک درخواست رزرو برای سفر شما وجود است. مشخصات سفر و مسافر بشرح زیر است"
       line2: در صورت تایید، شماره تلفن شما برای مسافر ارسال خواهد شد
       line3: برای تایید درخواست لطفا روی گزینه "قبول درخواست" و برای رد درخواست بر روی گزینه "رد درخواست" کلیک کنید
+    booking_positive_response_to_passenger: 
+      subject: تایید سفر از جانب راننده
+      driver_details: مشخصات راننده
+      line1: درخواست سفر شما از جانب راننده تایید شده است. مشخصات سفر و راننده به شرح زیر است
+      go_to_subtrip: برو به صفحه سفر
+    booking_negative_response_to_passenger:
+      subject: رد سفر از جانب راننده
+      line1: درخواست سفر شما از جانب راننده رد شده است. مشخصات سفر شما بدین شرح بود
+      go_to_search_subtrips: برو به صفحه جستجوی سفر
     trip_details:
       title:  مشخصات سفر
 
