--- a/config/locales/general/en.yml
+++ b/config/locales/general/en.yml
@@ -5,6 +5,9 @@ en:
   hi: Hello
   sign: HamsafarYab's team
   name_of_passenger: "Passenger's Name"
+  name_of_driver: "Driver's Name"
+  contact_number: Contact Number
+  email: Email
   number_of_requested_seats: Number of requested seats
   name_of_driver: "Drivers' Name"
   gender:
